--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
     
   <head>
+    <link rel="icon" href="weather.png">
     <meta charset="utf-8">
     <title>Weather Forecast</title>
     <meta name="description" content="Get your live local forecast, weather warnings & the latest updates !">
