--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -19,6 +19,10 @@
       gtag('js', new Date());
       gtag('config', 'G-6YKFCG55XL');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6343650725036009" crossorigin="anonymous"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
   </head>
 
   <body>
@@ -27,6 +31,14 @@
         <i class="fas fa-cloud fa-6x"></i>
         <h1 class="display-3">Weather Forecast</h1>
         <p class="lead">Get your live local forecast, weather warnings & the latest updates!</p>
+        <div class="advertisement">
+          <ins class="adsbygoogle"
+            data-ad-client="ca-pub-6343650725036009"
+            data-ad-slot="3263921922"
+            data-ad-format="auto"
+            data-full-width-responsive="true"
+          ></ins>
+        </div>
         <hr>
         <div class="row">
           <div class="col-lg-4"></div>
